; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bmake/extr_parse.c_Parse_MainName.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bmake/extr_parse.c_Parse_MainName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@mainNode = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"no target to make.\00", align 1
@OP_DOUBLEDEP = common dso_local global i32 0, align 4
@LST_CONCNEW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c".TARGETS\00", align 1
@VAR_GLOBAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Parse_MainName() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @FALSE, align 4
  %3 = call i32 @Lst_Init(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %5 = icmp eq %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @Punt(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %30

8:                                                ; preds = %0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @OP_DOUBLEDEP, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %8
  %16 = load i32, i32* %1, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %18 = call i32 @Lst_AtEnd(i32 %16, %struct.TYPE_3__* %17)
  %19 = load i32, i32* %1, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @LST_CONCNEW, align 4
  %24 = call i32 @Lst_Concat(i32 %19, i32 %22, i32 %23)
  br label %29

25:                                               ; preds = %8
  %26 = load i32, i32* %1, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %28 = call i32 @Lst_AtEnd(i32 %26, %struct.TYPE_3__* %27)
  br label %29

29:                                               ; preds = %25, %15
  br label %30

30:                                               ; preds = %29, %6
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** @mainNode, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @VAR_GLOBAL, align 4
  %35 = call i32 @Var_Append(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %33, i32 %34)
  %36 = load i32, i32* %1, align 4
  ret i32 %36
}

declare dso_local i32 @Lst_Init(i32) #1

declare dso_local i32 @Punt(i8*) #1

declare dso_local i32 @Lst_AtEnd(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @Lst_Concat(i32, i32, i32) #1

declare dso_local i32 @Var_Append(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
